backend/config/mall-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-order-deployment
  namespace: frogsoft-mall
  labels:
    app: mall-order
spec:
  selector:
    matchLabels:
      app: mall-order
  template:
    metadata:
      labels:
        app: mall-order
    spec:
      containers:
        - name: mall-order
          imagePullPolicy: IfNotPresent
          image: frogsoftware/mall-order:0.0.1
          ports:
            - containerPort: 9230
---
apiVersion: v1
kind: Service
metadata:
  name: mall-order-service
  namespace: frogsoft-mall
  labels:
    app: mall-order
spec:
  ports:
    - port: 9230
      targetPort: 9230
  selector:
    app: mall-order
  type: NodePort
