backend/config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frogsoft-mall-gateway
  namespace: frogsoft-mall
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frogsoft-mall
  namespace: frogsoft-mall
spec:
  hosts:
    - "*"
  gateways:
    - frogsoft-mall-gateway
  http:
    - match:
        - uri:
            prefix: /auth/
        - uri:
            exact: /auth
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-auth-service
            port:
              number: 9000
    - match:
        - uri:
            prefix: /commodities/
        - uri:
            exact: /commodities
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-commodity-service
            port:
              number: 9200
    - match:
        - uri:
            prefix: /customers/
        - uri:
            exact: /customers
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-customer-service
            port:
              number: 9220
    - match:
        - uri:
            prefix: /orders/
        - uri:
            exact: /orders
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-order-service
            port:
              number: 9230
    - match:
        - uri:
            prefix: /shops/
        - uri:
            exact: /shops
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-shop-service
            port:
              number: 9210
    - match:
        - uri:
            prefix: /users/
        - uri:
            exact: /users
      rewrite:
        uri: /
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - POST
          - GET
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - Content-Type
          - Authorization
      route:
        - destination:
            host: mall-user-service
            port:
              number: 9100
